--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -1,48 +1,57 @@
 <%- include('../partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets//reviews/forms.css" />
 <%- include('../partials/nav') %>
 
 <main>
+  <div id="header">
+    <h1> 
+      <%= title %> for 
+      <br>
+      <a href="/tools/<%= tool._id %>"><%= tool.name %></a>
+    </h1>
+  </div>
   <section>
-  <h1> <%= title %> for <%= tool.name %></h1>
-
-  <form action="/tools/<%= tool._id %>/reviews/<%= review._id %>?_method=PUT"
-    method="POST">
-    <div>
-      <label for="content"></label>
-      <textarea name="content" id="content" cols="30" rows="10"><%= review.content %></textarea>
-    </div>
-    <div>
-      <label for="rating">Rating</label>
-      <select name="rating" id="rating">
-        <option value="<%= review.rating %>"><%= review.rating %></option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-      </select>
-    </div>
-    <% if (review.author.equals(user?.profile._id)) { %>
+    <form action="/tools/<%= tool._id %>/reviews/<%= review._id %>?_method=PUT"
+      method="POST">
       <div>
-        <button type="submit">Update Review</button>
+        <label for="content">Review</label>
+        <textarea name="content" id="content" cols="30" rows="10"><%= review.content %></textarea>
+      </div>
+      <div id="rating">
+        <label for="rating">Rating</label>
+        <select name="rating" id="rating">
+          <option value="<%= review.rating %>"><%= review.rating %></option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+        <% if (review.author.equals(user?.profile._id)) { %>
+          <div class="buttons">
+            <button type="submit">Update Review</button>
+          </div>
+        <% } %>
+      </form>
+      <form action="/tools/<%= tool._id %>/reviews/<%= review._id %>?_method=DELETE"
+      method="POST">
+        <% if (review.author.equals(user?.profile._id)) { %>
+          <div>
+            <button id="delete-button" type="submit">Delete Review</button>
+          </div>
+        <% } %>
+      </form>
+
+    <% if (blankError) { %>
+      <div class="error">
+        <h2>Please don't leave any fields blank</h2>
+      </div>
+    <% } else if (!blankError) {%>
+      <div class="error">
+        <h2>Thanks for sharing your thoughts</h2>
       </div>
     <% } %>
-  </form>
-
-  <form action="/tools/<%= tool._id %>/reviews/<%= review._id %>?_method=DELETE"
-    method="POST">
-    <% if (review.author.equals(user?.profile._id)) { %>
-      <div>
-        <button type="submit">Delete Review</button>
-      </div>
-    <% } %>
-  </form>
-
-  <% if (blankError) { %>
-    <div>
-      <h2>Please don't leave any fields blank</h2>
-    </div>
-  <% } %>
   </section>
 
 <%- include('../partials/footer') %>
