--- a/views/tools/new.ejs
+++ b/views/tools/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/html-head') %>
 
-<link rel="stylesheet" href="/stylesheets//tools/form.css" />
+<link rel="stylesheet" href="/stylesheets//tools/forms.css" />
 <%- include('../partials/nav') %>
 
 <main>
@@ -47,7 +47,7 @@
           </select>
         </div>
       </div>
-      <div id="button">
+      <div id="buttons">
         <button type="submit">Add Tool</button>
       </div>
     </form>
