--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,8 +8,15 @@ html {
 }
 
 body {
-  background-color: rgba(3, 33, 25, 1);
-  color: #f6f6f6;
+  --background-color: rgba(3, 33, 25, 1);
+  --text-on-background-color: rgba(246, 246, 246, 1);
+  --button-color: rgba(62, 142, 65, 1);
+  --button-hover-color: rgba(67, 131, 67, 0.5);
+  --form-background-color: rgba(247, 247, 247, 1);
+  --delete-button-color: rgba(244, 67, 54, 1);
+  --delete-button-hover-color: rgba(144, 22, 14, 1);
+  background-color: var(--background-color);
+  color: var(--text-on-background-color);
   /* Use a system font, if none are available use any found sans-sarif font */
   font-family: system-ui, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 
     'Helvetica Neue', sans-serif;
@@ -37,19 +44,41 @@ nav {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   
-  nav a, nav div {
-  margin: 0 10px;
-  font-size: 16px;
-  color: #032119;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: bold;
-  }
-  
-  nav i {
-  margin-right: 10px;
-  }
-  
-  nav .active {
-  color: rgb(12, 128, 97);
-  }
+nav a, nav div {
+margin: 0 10px;
+font-size: 16px;
+color: #032119;
+text-decoration: none;
+text-transform: uppercase;
+font-weight: bold;
+}
+
+nav i {
+margin-right: 10px;
+}
+
+nav .active {
+color: rgb(12, 128, 97);
+}
+
+button {
+  background-color: var(--button-color);
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  color: white;
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+button:hover {
+  background-color: var(--button-hover-color);
+}
+
+#delete-button {
+  background-color: var(--delete-button-color);
+}
+
+#delete-button:hover {
+  background-color: var(--delete-button-hover-color);
+}
