--- a/views/reviews/index.ejs
+++ b/views/reviews/index.ejs
@@ -1,12 +1,36 @@
 <%- include('../partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets//reviews/index.css" />
+
 <%- include('../partials/nav') %>
 
 <main>
-  <h1> <%= title %> for <%= tool.name %></h1>
+  <div id="header">
+    <h1> 
+      Reviews for 
+      <br>
+      <a href="/tools/<%= tool._id %>"><%= tool.name %></a>
+    </h1>
+  </div>
+  <% if (tool.reviews.length > 0) { %>
+    <div class="average-rating">
+      <p>Average Rating: <%= tool.averageRating %>
+        <% for (let i = 0; i < tool.averageRating; i++) { %>
+          <span>⭐</span>
+        <% } %>
+      </p>
+    </div>
+    <p><%= tool.reviews.length  %> 
+      <% if (tool.reviews.length === 1) { %>
+        Review
+      <% } else { %>
+        Reviews
+      <% } %>
+    </p>
+  <% } %>
   <% let userReview = tool.reviews.find(review => review.author.equals(user?.profile._id)) %>
   <% if (userReview) { %>
     <a href="/tools/<%= tool._id %>/reviews/<%= userReview._id %>/edit">
-      <button type="button">Edit Review</button>
+      <button type="button">Edit My Review</button>
     </a>
   <% } else if (user) { %>
     <a href="/tools/<%= tool._id %>/reviews/new">
@@ -19,18 +43,20 @@
       <h2>No Reviews Yet</h2>
     <% } else { %>
       <% tool.reviews.forEach(review => { %>
-        <div>
+        <div class="reviewer">
           <img src="<%= review.author.avatar %>" alt=" <%= review.author.name %>">
-          <p><%= review.author.name %></p>
+          <h3><a href="/profiles/<%= review.author._id %>"><%= review.author.name %></a></h3>
           <p><%= review.content %></p>
-          <p>Rating: <%= review.rating %></p>
+          <p>
+            <% for (let i = 0; i < review.rating; i++) { %>
+              <span>⭐</span>
+            <% } %>
+          </p>
           <p><%= review.createdAt.toLocaleDateString() %></p>
         </div>
       <% }) %>
     <% } %>
-    
   </div>
-  </section>
 </main>
 
 <%- include('../partials/footer') %>
