--- a/views/tools/index.ejs
+++ b/views/tools/index.ejs
@@ -11,7 +11,7 @@
 
   <section>
     <% tools.forEach(tool => { %>
-      <div>
+      <div class="tooltype">
         <h2>Name: <%= tool.name %></h2>
         <p>Created by: <%= tool.author.name %></p>
         <% if (tool.type) { %>
