--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -82,3 +82,17 @@ button:hover {
 #delete-button:hover {
   background-color: var(--delete-button-hover-color);
 }
+
+a {
+  color: var(--button-color);
+  font-weight: bold;
+}
+
+#instructions {
+  margin-top: -15px;
+  max-width: 75%;
+}
+
+.average-rating {
+  margin-bottom: 10px;
+}
