--- a/views/profiles/createdTools.ejs
+++ b/views/profiles/createdTools.ejs
@@ -1,25 +1,63 @@
 <%- include('../partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets/profiles/createdTools.css">
 <%- include('../partials/nav') %>
 
 <main>
-  <h1><%= title %></h1>
+  <div class="header">
+    <h1>
+      <a href="/profiles/<%= profile._id %>"><%= profile.name %>'s</a>
+      <br>
+      Tools
+    </h1>
+  </div>
   <section>
     <% tools.forEach(tool => { %>
-      <div>
-        <h2>Name: <%= tool.name %></h2>
-        <p> Tool Type: <%= tool.type.name %></p>
-        <img src="<%= tool.imgSrc %>" alt="tool image">
-        <% if (tool.averageRating) { %>
-          <p> Average Rating: <%= tool.averageRating %></p>
-        <% } %>
-        <a href="/tools/<%= tool._id %>">
-          <button> Tool Details</button>
-        </a>
-        <% if (tool.author.equals(user.profile._id)) { %>
-          <a href="/tools/<%= tool._id %>/edit">
-            <button>Edit Tool</button>
-          </a>
-        <% } %>
+      <div class="tool">
+        <div class="img">
+          <img src="<% tool.imgSrc %>" alt="tool image">
+        </div>
+        <div class="info">
+          <div>
+            <h2><%= tool.name %></h2>
+          </div>
+          <div>
+            <% if (tool.type) { %>
+              <p> Tool Type: <a href="/toolTypes/<%= tool.type._id %>"><%= tool.type.name %></a></p>
+            <% } %>
+          </div>
+          <div>
+            <% if (tool.reviews.length > 0) { %>
+              <div class="average-rating">
+                <p><%= tool.averageRating %>.0
+                  <% for (let i = 0; i < tool.averageRating; i++) { %>
+                    <span>⭐</span>
+                  <% } %>
+                  <% if (tool.reviews.length === 1) { %>
+                    <a href="/tools/<%= tool._id %>/reviews">
+                      <%= tool.reviews.length  %> Review
+                    </a>
+                  <% } else { %>
+                    <a href="/tools/<%= tool._id %>/reviews">
+                      <%= tool.reviews.length  %> Reviews
+                    </a>            
+                  <% } %>
+                </p>
+              </div>
+            <% } %>
+          </div>
+          <div class="details">
+            <a href="/tools/<%= tool._id %>">
+              <button> Tool Details</button>
+            </a>
+          </div>
+          <div>
+            <% if (tool.author.equals(user.profile._id)) { %>
+              <a href="/tools/<%= tool._id %>/edit">
+                <button>Edit Tool</button>
+              </a>
+            <% } %>
+          </div>
+        </div>
       </div>
     <% }) %>
   </section>
