--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -1,17 +1,20 @@
 <%- include('../partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets/profiles/index.css">
 <%- include('../partials/nav') %>
 
 <main>
   <h1><%= title %></h1>
-  <% profiles.forEach(profile => { %>
-    <div>
-      <img src="<%= profile.avatar %>" alt=" <%= profile.name %>">
-      <p><%= profile.name %></p>
-      <a href="/profiles/<%= profile._id %>">
-        <button>Profile Details</button>
-      </a>
-    </div>
-  <% }) %>
+  <section>
+    <% profiles.forEach(profile => { %>
+      <div>
+        <img src="<%= profile.avatar %>" alt=" <%= profile.name %>">
+        <p><%= profile.name %></p>
+        <a href="/profiles/<%= profile._id %>">
+          <button>Profile Details</button>
+        </a>
+      </div>
+    <% }) %>
+  </section>
 </main>
 
 <%- include('../partials/footer') %>
