--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -1,35 +1,29 @@
 <%- include('../partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets/profiles/show.css">
 <%- include('../partials/nav') %>
 
 <main>
   <h1><%= title %></h1>
   <section>
-    <div>
+    <div id="profile">
       <img src="<%= profile.avatar %>" alt=" <%= profile.name %>">
       <p>Member since: <%= profile.createdAt.toLocaleDateString() %></p>
     </div>
-    <div>
-      <h2>Created Tools: <%= tools.length %></h2>
+    <div id="created">
       <% if (user) { %>
         <div>
           <a href="/profiles/<%= profile._id %>/createdTools">
-            <button> See Created Tools</button>
+            <button>Created Tools</button>
           </a>
         </div>
-      <% } %>
-      <h2>Created Tool Types: <%=  toolTypes.length %></h2>
-      <% if (user) { %>
         <div>
           <a href="/profiles/<%= profile._id %>/createdToolTypes">
-            <button> See Created Tool Types</button>
+            <button>Created Tool Types</button>
           </a>
         </div>
-      <% } %>
-      <h2>Tool Reviews: <%= reviews.length %></h2>
-      <% if (user) { %>
         <div>
           <a href="/profiles/<%= profile._id %>/toolReviews">
-            <button> See Reviews</button>
+            <button>Tool Reviews</button>
           </a>
         </div>
       <% } %>
@@ -39,32 +33,56 @@
     <% } %>
   </section>
   <section>
-    <h2>Top 3 Favorite Tools:</h2>
+    <h2>3 Favorite Tools</h2>
     <% if (profile.favoriteTools.length === 0) { %>
-      <p>No favorite tools yet</p>
+      <p> No Favorite Tools Yet</p>
     <% } else { %>
       <% profile.favoriteTools.forEach(favoriteTool => { %>
-        <div>
-          <img src="<%= favoriteTool.image %>" alt=" <%= favoriteTool.name %>">
-          <p><%= favoriteTool.name %></p>
-          <p><%= favoriteTool.description %></p>
-          <% if (favoriteTool.averageRating) { %>
-            <p> Average Rating: <%= favoriteTool.averageRating %></p>
-          <% } %>
-          <a href="/tools/<%= favoriteTool._id %>">
-            <button> Tool Details</button>
-          </a>
-          <% if (profile._id.equals(user?.profile._id)) { %>
-            <form action="/profiles/<%= profile._id %>/favoriteTools/<%= favoriteTool._id %>?_method=DELETE" method="POST">
-              <button type="submit">Remove from Favorites</button>
-            </form>
-          <% } %>
+        <div class="tool">
+          <div class="img">
+            <img src="<% favoriteTool.imgSrc %>" alt="tool image">
+          </div>
+          <div class="info">
+            <div>
+              <h2><%= favoriteTool.name %></h2>
+            </div>
+            <div>
+              <% if (favoriteTool.reviews.length > 0) { %>
+                <div class="average-rating">
+                  <p><%= favoriteTool.averageRating %>.0
+                    <% for (let i = 0; i < favoriteTool.averageRating; i++) { %>
+                      <span>⭐</span>
+                    <% } %>
+                    <% if (favoriteTool.reviews.length === 1) { %>
+                      <a href="/tools/<%= favoriteTool._id %>/reviews">
+                        <%= favoriteTool.reviews.length  %> Review
+                      </a>
+                    <% } else { %>
+                      <a href="/tools/<%= favoriteTool._id %>/reviews">
+                        <%= favoriteTool.reviews.length  %> Reviews
+                      </a>            
+                    <% } %>
+                  </p>
+                </div>
+              <% } %>
+            </div>
+            <div class="details">
+              <a href="/tools/<%= favoriteTool._id %>">
+                <button> Tool Details</button>
+              </a>
+            </div>
+            <div>
+              <% if (profile._id.equals(user?.profile._id)) { %>
+                <form action="/profiles/<%= profile._id %>/favoriteTools/<%= favoriteTool._id %>?_method=DELETE" method="POST">
+                  <button type="submit">Remove from Favorites</button>
+                </form>
+              <% } %>
+            </div>
+          </div>
         </div>
       <% }) %>
     <% } %>
   </section>
-
-    </div>
 </main>
 
 <%- include('../partials/footer') %>
