--- a/public/stylesheets/tools/forms.css
+++ b/public/stylesheets/tools/forms.css
@@ -7,8 +7,8 @@ section {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   margin: 20px 0px 0px 0px;
-  width: 600px;
   padding: 30px 30px 0px 30px;
+  width: 600px;
   height: 700px;
   display: flex;
   flex-direction: column;
@@ -31,10 +31,10 @@ form div {
   align-items: flex-start;
   justify-content: center;
   width: 100%;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
-textarea {
+#instructions {
   height: 100px;
   resize: none;
   width: 100%;
@@ -49,7 +49,7 @@ p {
 
 label {
   color: black;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 div {
@@ -115,4 +115,5 @@ a {
 
 #header {
   margin-bottom: -25px;
+
 }
