create read me rough draft, adjust tool new/edit pages to allow text area full width

--- a/views/profiles/createdToolTypes.ejs
+++ b/views/profiles/createdToolTypes.ejs
@@ -10,7 +10,7 @@
   </div>
   <section>
     <% toolTypes.forEach(toolType => { %>
-      <div class="toolType">
+      <div class="tool-type">
         <h2><%= toolType.name %></h2>
         <p>
           <a href="/toolTypes/<%= toolType._id %>">
