--- a/public/stylesheets/profiles/createdToolTypes.css
+++ b/public/stylesheets/profiles/createdToolTypes.css
@@ -5,10 +5,16 @@ main {
   align-items: center;
 }
 
-.toolType {
+.tool-type {
   margin: 20px;
   text-align: center;
+  background-color: var(--form-background-color);
+  color: black;
+  width: 250px;
+  height: 175px;
+  padding: 10px;
 }
+
 
 h1 {
   margin: 20px;
