ensure img src from favroti tool is correctly communicated in profile page to allow desired picture to appear

--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -40,7 +40,7 @@
       <% profile.favoriteTools.forEach(favoriteTool => { %>
         <div class="tool">
           <div class="img">
-            <img src="<% favoriteTool.imgSrc %>" alt="tool image">
+            <img src="<%= favoriteTool.imgSrc %>" alt="tool image">
           </div>
           <div class="info">
             <div>
