ensure img src from created tools is correctly communicated in profile to allow desired picture to appear

--- a/views/profiles/createdTools.ejs
+++ b/views/profiles/createdTools.ejs
@@ -14,7 +14,7 @@
     <% tools.forEach(tool => { %>
       <div class="tool">
         <div class="img">
-          <img src="<% tool.imgSrc %>" alt="tool image">
+          <img src="<%= tool.imgSrc %>" alt="tool image">
         </div>
         <div class="info">
           <div>
