add search feature to profile page, ensure tools without reviews display no reviews and the ability to add them

--- a/views/profiles/createdTools.ejs
+++ b/views/profiles/createdTools.ejs
@@ -43,6 +43,12 @@
                   <% } %>
                 </p>
               </div>
+            <% } else if (tool.reviews.length === 0) { %>
+              <div class="average-rating">
+                <p>
+                  <a href="/tools/<%= tool._id %>/reviews">No Reviews</a>
+                </p>
+              </div>
             <% } %>
           </div>
           <div class="details">
