--- a/public/stylesheets/profiles/index.css
+++ b/public/stylesheets/profiles/index.css
@@ -16,4 +16,16 @@ section div {
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding: 10px;
+}
+
+#search input {
+  height: 20px;
+  padding: 0 10px;
+
+}
+
+#search button {
+  height: 20px;
+  padding: 0 10px;
 }
