--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -4,6 +4,13 @@
 
 <main>
   <h1><%= title %></h1>
+  <div id="search">
+    <form action="/profiles/search" method="GET">
+      <label for="search">Search by Name:</label>
+      <input type="text" name="searchName" id="search" autocomplete="off">
+      <button type="submit">Search</button>
+    </form>    
+  </div>
   <section>
     <% profiles.forEach(profile => { %>
       <div>
