--- a/views/tools/index.ejs
+++ b/views/tools/index.ejs
@@ -43,7 +43,13 @@
                   <% } %>
                 </p>
               </div>
-            <% } %>
+            <% } else if (tool.reviews.length === 0) { %>
+              <div class="average-rating">
+                <p>
+                  <a href="/tools/<%= tool._id %>/reviews">No Reviews</a>
+                </p>
+              </div>
+            <% } %>%>
           </div>
           <div>
             <a href="/tools/<%= tool._id %>">
