--- a/public/stylesheets/tools/index.css
+++ b/public/stylesheets/tools/index.css
@@ -16,6 +16,7 @@ main {
   align-items: center;
   text-align: center;
   height: 300px;
+  padding-bottom: 30px;
 }
 
 .img {
@@ -71,4 +72,20 @@ p {
 
 h1 {
   font-size: 3em;
+}
+
+#sorting {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#sorting div {
+  margin: 20px;
+}
+
+#sorting div button {
+  height: 20px;
+  padding: 0 10px;
 }
