adjust read me, create assets folder in public for images

--- a/public/stylesheets/profiles/createdTools.css
+++ b/public/stylesheets/profiles/createdTools.css
@@ -17,8 +17,8 @@ main {
   text-align: center;
   height: 300px;
   margin-bottom: 40px;
+  padding-bottom: 40px;
 }
-
 
 .img {
   border-top-right-radius: 8px;
