--- a/public/stylesheets/tools/forms.css
+++ b/public/stylesheets/tools/forms.css
@@ -79,7 +79,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: black
+  color: black;
 }
 
 #selectors {
@@ -115,5 +115,4 @@ a {
 
 #header {
   margin-bottom: -25px;
-
 }
