--- a/public/stylesheets/profiles/index.css
+++ b/public/stylesheets/profiles/index.css
@@ -1,6 +1,15 @@
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 section {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
   width: 75%;
